syntax = "proto3";
package router;

service Router {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc GenerateProto(GenerateProtoRequest) returns (GenerateProtoResponse);
  rpc RegisterConduitRoute (RegisterConduitRouteRequest) returns (Empty);
  rpc RegisterProxyRoute (RegisterProxyRouteRequest) returns (Empty);
  rpc SocketPush (SocketData) returns (Empty);
}

message GenerateProtoRequest {
  string moduleName = 1;
  repeated string routes = 2;
}

message GenerateProtoResponse {
  string protoFile = 1;
  string formattedModuleName = 2;
}

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

message SocketData {
  string event = 1;
  string data = 2;
  repeated string receivers = 3;
  repeated string rooms = 4;
}

message ProxyRouteOptions {
  string path = 1;
  string target = 2;
  optional string description = 3;
  repeated string middlewares = 4;
}

message RegisterProxyRouteRequest {
 repeated ProxyRouteDefinition proxyRoutes = 1;
 string protoFile = 2;
 optional string routerUrl = 3;

message ProxyRouteDefinition {
   ProxyRouteOptions options = 1;
 }
 message ProxyRouteOptions {
   string path = 1;
   string target = 2;
   optional string description = 3;
   repeated string middlewares = 4;
   repeated string rooms = 5;
 }
}



message RegisterConduitRouteRequest {
  repeated PathDefinition routes = 1;
  string protoFile = 2;
  optional string routerUrl = 3;

  message PathDefinition {
    ConduitRouteOptions options = 1;
    optional ConduitRouteReturnDefinition returns = 2;
    optional string grpcFunction = 3;
    optional bool isMiddleware = 4;
    optional string events = 5;
  }

  message ConduitRouteOptions {
    optional string queryParams = 1;
    optional string bodyParams = 2;
    optional string urlParams = 3;
    optional string action = 4;
    string path = 5;
    optional string name = 6;
    optional string description = 7;
    repeated string middlewares = 8;
    optional string cacheControl = 9;
  }

  message ConduitRouteReturnDefinition {
    string name = 1;
    string fields = 2;
  }
}

message Empty {
}
